# game-demo

./: .gitignore  CMakeLists.txt  README.md  setup.sh  vcpkg.json
include/game/: Game.h  Renderer.h
src/: main.cpp
src/game/: Game.cpp  Renderer.cpp
